aws_security_group.tf
resource "aws_security_group" "rds" {
  name        = var.rds-security-group
  description = "Security Group da Instancia RDS"

  ingress {
    protocol    = "tcp"
    from_port   = 5432
    to_port     = 5432
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = -1
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
